ESMValTool/esmvaltool/recipes/hydrology/esmvaltool_output/recipe_HBVmountain_20220531_090138/run/diagnostic_daily/script/log.txt
  File "/home/vhoogeland/ESMValTool/esmvaltool/diag_scripts/hydrology/HBVmountain.py", line 146
    pet.convert_units('kg m-2 day-1')  # equivalent to mm/day
    ^
SyntaxError: invalid syntax
